@@ -15,7 +15,7 @@
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en">Adds extra artwork for your media from wonderful web services.</summary>
 		<description lang="en">Adds extra artwork for TV shows, movies and music videos into your library.</description>
-		<disclaimer lang="en">Artwork sources: www.fanart.tv</disclaimer>
+		<disclaimer lang="en">Artwork sources: fanart.tv, TheTVDB.com</disclaimer>
 		<platform>all</platform>
 		<language />
 		<website />
